# chip8-emulator

./: CMakeLists.txt
src/: CMakeLists.txt  chip8.cpp  chip8.h  main.cpp
test/: CMakeLists.txt  chip8_test.cpp
